adding money and validate pin number

--- a/js/home.html
+++ b/js/home.html
@@ -15,8 +15,7 @@
               <div class="artboard artboard-demo phone-3">
                 <div class="stats shadow">
                 <div class="stat">
-                  <div class="stat-title">Total Page Views</div>
-                  <div class="stat-value">89400</div>
+                  <div id="balance" class="stat-value">9400</div>
                   <div class="stat-desc">Available Balance</div>
                 </div>
 
@@ -35,7 +34,7 @@
                         <form class="card-body">
                           <div class="form-control">
                             <label class="label">
-                              <span class="label-text">Email</span>
+                              <span class="label-text">Amount</span>
                             </label>
                             <input id="add-money-field" type="text" placeholder="Amount" class="input input-bordered" required />
                           </div>
