--- a/js/home.html
+++ b/js/home.html
@@ -1,60 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    <main class="flex justify-center mt-5">
-        <div class="mockup-phone">
-            <div class="camera"></div>
-            <div class="display">
-              <div class="artboard artboard-demo phone-3">
-                <div class="stats shadow">
-                <div class="stat">
-                  <div id="balance" class="stat-value">9400</div>
-                  <div class="stat-desc">Available Balance</div>
-                </div>
-
-              </div>
-              <div class="divider"></div>
-
-              <!-- User Action Button -->
-               <div>
-                <button id="adding-money" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Add Money</button>
-                <button id="cashing-out" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Cash Out</button>
-               </div>
-               <div class="divider"></div>
-               <!-- Add moeny from start -->
-
-                      <div class="card card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
-                        <form class="card-body">
-                          <div class="form-control">
-                            <label class="label">
-                              <span class="label-text">Amount</span>
-                            </label>
-                            <input id="add-money-field" type="text" placeholder="Amount" class="input input-bordered" required />
-                          </div>
-                          <div class="form-control">
-                            <label class="label">
-                              <span class="label-text">Password</span>
-                            </label>
-                            <input id="input-pin-number" type="password" placeholder="Pin Number" class="input input-bordered" required />
-                          </div>
-                          <div class="form-control mt-6">
-                            <button id="add-money-btn" class="btn btn-primary">Login</button>
-                          </div>
-                        </form>
-                      </div>
-              <!-- Add moeny from end -->
+  <main class="flex justify-center mt-5">
+    <div class="mockup-phone">
+      <div class="camera"></div>
+      <div class="display">
+        <div class="artboard artboard-demo phone-3">
+          <div class="stats shadow">
+            <div class="stat">
+              <div id="balance" class="stat-value">9400</div>
+              <div class="stat-desc">Available Balance</div>
             </div>
-            </div>
+
           </div>
-    </main>
+          <div class="divider"></div>
 
-    <script src="home.js"></script>
+          <!-- User Action Button -->
+          <div>
+            <button id="addingmoney" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Add Money</button>
+            <button id="cashing-out" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Cash Out</button>
+          </div>
+          <div class="divider"></div>
+          <!-- Add moeny from start -->
+
+          <div id="add-money-form" class="card card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+            <form class="card-body">
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text">Amount</span>
+                </label>
+                <input id="add-money-field" type="text" placeholder="Amount" class="input input-bordered" required />
+              </div>
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text">Password</span>
+                </label>
+                <input id="input-pin-number" type="password" placeholder="Pin Number" class="input input-bordered"
+                  required />
+              </div>
+              <div class="form-control mt-6">
+                <button id="add-money-btn" class="btn btn-primary">Add Money</button>
+              </div>
+            </form>
+          </div>
+          <!-- Add moeny from end -->
+
+          <!-- Cash Out Form section start -->
+
+          <div id="cash-out-form" class="hidden card card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+            <form class="card-body">
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text">Cash Out</span>
+                </label>
+                <input id="cash-money-field" type="text" placeholder="Amount" class="input input-bordered" required />
+              </div>
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text">Password</span>
+                </label>
+                <input id="cash-out-pin-number" type="password" placeholder="Pin Number" class="input input-bordered"
+                  required />
+              </div>
+              <div class="form-control mt-6">
+                <button id="cash-money-btn" class="btn btn-primary">Cash Out</button>
+              </div>
+            </form>
+          </div>
+
+        <!-- Cash Out Form section end -->
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <script src="home.js"></script>
+  <script src="feature.js"></script>
 </body>
+
 </html>
